# cool_robot

./: readme.md
cool_robot_bringup/: CMakeLists.txt  package.xml
cool_robot_bringup/config/: cool_robot_controllers.yaml
cool_robot_bringup/launch/: cool_robot.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py
cool_robot_controller/: CMakeLists.txt  cool_robot_controller.xml  package.xml
cool_robot_controller/include/cool_robot_controller/: cool_robot_controller.hpp  validate_cool_robot_controller_parameters.hpp  visibility_control.h
cool_robot_controller/src/: cool_robot_controller.cpp  cool_robot_controller.yaml
cool_robot_controller/test/: cool_robot_controller_params.yaml  cool_robot_controller_preceeding_params.yaml  test_cool_robot_controller.cpp  test_cool_robot_controller.hpp  test_cool_robot_controller_preceeding.cpp  test_load_cool_robot_controller.cpp
cool_robot_description/: CMakeLists.txt  package.xml
cool_robot_description/config/: rs_m90e7.yaml  rs_m90e7_j1j2.yaml  rs_m90e7_j3j4j5.yaml  rs_m90e7_j6.yaml
cool_robot_description/launch/: view_cool_robot.launch.py
cool_robot_description/rviz/: cool_robot.rviz
cool_robot_description/urdf/: cool_robot.urdf.xacro
cool_robot_description/urdf/cool_robot/: cool_robot_macro.ros2_control.xacro  cool_robot_macro.xacro
cool_robot_joystick/cool_robot_joystick/: CMakeLists.txt  package.xml
cool_robot_joystick/cool_robot_joystick/launch/: joystick.launch.py
cool_robot_joystick/cool_robot_joystick/src/: xbox_joystick.cpp
